--- a/index.html
+++ b/index.html
@@ -547,6 +547,16 @@
                     <p>Stanley College of Engineering & Technology for Women</p>
                     <time>2016-2020</time>
                 </div>
+                <div class="timeline-block">
+                    <h1>Intermediate</h1>
+                    <p>Sri Chaitanya Junior Kalasala</p>
+                    <time>2016-2016</time>
+                </div>
+                <div class="timeline-block">
+                    <h1>Schooling</h1>
+                    <p>St. Anns Girls High School</p>
+                    <time>2010-2014</time>
+                </div>
             </div>
         </div>
 
